Fix Create Bill and update DB